--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,20 @@
 {
+  "eslint.format.enable": true,
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "editor.formatOnSave": true,
   "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  "[javascriptreact]": {
     "editor.formatOnSave": false
   },
   "[typescript]": {
     "editor.formatOnSave": false
   },
+  "[typescriptreact]": {
+    "editor.formatOnSave": false
+  },
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
-  },
-  "eslint.format.enable": true,
-  "eslint.validate": ["javascript", "typescript", "javascriptreact"]
+  }
 }
