--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,14 +6,14 @@
       "script": "lint",
       "problemMatcher": [],
       "label": "npm: lint",
-      "detail": "eslint . -c eslintrc.json"
+      "detail": "eslint . -c .eslintrc.js"
     },
     {
       "type": "npm",
       "script": "lint-fix",
       "problemMatcher": [],
       "label": "npm: lint-fix",
-      "detail": "eslint . -c eslintrc.json --fix"
+      "detail": "eslint . -c .eslintrc.js --fix"
     },
     {
       "type": "npm",
