--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vrz/eslint-config-standard",
   "description": "ESLint Shareable Config",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": {
     "name": "Athos Garcia",
     "email": "athospg@outlook.com"
@@ -9,18 +9,30 @@
   "license": "AGPL-3.0",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint . -c eslintrc.json",
-    "lint-fix": "eslint . -c eslintrc.json --fix",
+    "lint": "eslint . -c .eslintrc.js",
+    "lint-fix": "eslint . -c .eslintrc.js --fix",
     "test": "npm run lint && tape test/*.js",
     "publish": "npm publish --access public"
   },
+  "dependencies": {
+    "@typescript-eslint/parser": "^4.20.0"
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.14.2",
+    "doctoc": "2.0.0",
     "eslint": "^7.20.0",
+    "eslint-config-prettier": "7.2.0",
     "eslint-plugin-angular": "^4.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "tape": "^5.0.1"
+    "husky": "4.3.8",
+    "lint-staged": "10.5.4",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.2.1",
+    "prettier-package-json": "2.1.3",
+    "tape": "^5.0.1",
+    "typescript": "4.1.3"
   },
   "peerDependencies": {
     "eslint": "^7.20.0",
@@ -28,6 +40,5 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1"
-  },
-  "dependencies": {}
+  }
 }
