--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "test": "npm run lint && tape test/*.js",
     "publish": "npm publish --access public"
   },
-  "dependencies": {
-    "@typescript-eslint/parser": "^4.26.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "doctoc": "^2.0.0",
     "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-angular": "^4.0.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
@@ -40,5 +38,9 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/athospg/vrz-eslint-config-standard.git"
   }
 }
