--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,6 +21,6 @@ jobs:
         run: npm install
 
       - name: Publish
-        run: npm run publish
+        run: npm run pub-pub
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
