--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . -c .eslintrc.js",
     "lint-fix": "eslint . -c .eslintrc.js --fix",
     "test": "npm run lint && tape test/*.js",
-    "publish": "npm publish --access public"
+    "pub-pub": "npm publish --access public"
   },
   "dependencies": {},
   "devDependencies": {
